fixing text issue overlap

--- a/SEG3125-Module4-HealthClinic/styles/styles.css
+++ b/SEG3125-Module4-HealthClinic/styles/styles.css
@@ -1,11 +1,15 @@
  h1{
     color:#323185;
     white-space: normal;
+    overflow-wrap: normal;
  } 
  h2{
     color:#323185;
     margin-top: 5%;
  } 
+ h3{
+    overflow-wrap: normal;
+ }
 .accordion-button {
      font-size:22px;
  }
